# MDDC

./: .coveragerc  .gitignore  .readthedocs.yml  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build_wheels.yml  codecov.yml  publish.yml
MDDC/: __init__.py
MDDC/MDDC/: __init__.py  _find_optimal_coef.py  _helper.py  _mddc.py  _mddc_basic.py  _mddc_boxplot.py  _mddc_monte_carlo.py  mddc.py
MDDC/datasets/: __init__.py  _dataset.py
MDDC/datasets/data/: anaphylaxis.csv  anaphylaxis.rst  betablocker500.csv  betablocker500.rst  sedative1000.csv  sedative1000.rst  statin101.csv  statin101.rst  statin49.csv  statin49.rst  statin49_with_cluster_idx.csv  statin49_with_cluster_idx.rst
MDDC/utils/: __init__.py  _util.py  _utils.py  utils.py
docs/: requirements.txt  requiremnets.txt
docs/source/: conf.py  index.rst  mddc_algorithm.rst
docs/source/_static/css/: custom.css  version_alert.js
docs/source/_static/js/: version_warning.js
docs/source/api_reference/: index.rst
docs/source/changelog/: index.rst  v1.0.0.rst  v1.1.0.rst
docs/source/development/: CODE_OF_CONDUCT.rst  CONTRIBUTING.rst
docs/source/getting_started/: installation.rst
docs/source/user_guide/: MDDC_Usage.ipynb  datasets.rst  index.rst  mc_algorithm.rst  mddc_algorithm.rst  optimal_c_algorithm.rst
src/: main.cpp
tests/: test_datasets.py  test_find_optimal_coef.py  test_import.py  test_mddc.py  test_utils.py
